...
    <string name="nav_header_title">Not Login</string>
    <string name="nav_header_subtitle">Please login in or register to continue.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_me">Me</string>

    <!-- Text for the exception message in FragmentCommunicate. -->
    <string name="exception_message">must implement OnFragmentInteractionListener</string>

    <!-- Text for Map fragment. -->
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="button_refresh">Refresh</string>
    <string name="marker_refresh">Search Nearby Users</string>
    <string name="marker_clear">Clear All Markers</string>
    <string name="map_type_notify">Already in this type.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_regular_pattern"><![CDATA[(?<=\\()\\d+(?=\\))]]></string>
    <string name="button_remove">button remove</string>
    <string name="default_name">Default_Name</string>
...
